--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -11,8 +11,8 @@
 @media (prefers-color-scheme: dark) {
   :root {
     --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
+    --background-start-rgb: 15, 15, 15;
+    --background-end-rgb: 15, 15, 15;
   }
 }
 
@@ -30,4 +30,17 @@ body {
   .text-balance {
     text-wrap: balance;
   }
+}
+
+a {
+  width: 15%;
+  text-align: center;
+  :hover {
+    background-color: rgb(50,50,50);
+    color: white;
+  }
+}
+li{
+    list-style-type: disc;
+    list-style-position: inside;
 }
