--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -32,15 +32,28 @@ body {
   }
 }
 
-a {
-  width: 15%;
-  text-align: center;
+ul{
+  display: flex;
+  justify-content: flex-start;
+}
+
+header{
+  padding-left : 10px;
+  display: flex;
+  align-items: center;
+  background-color: rgb(0, 0, 0);
+  min-height: 50px;
+}
+
+li{
+  display: flex;
   :hover {
-    background-color: rgb(50,50,50);
-    color: white;
+    border-radius: 5px;
+    background-color: rgb(100, 100, 100);
   }
 }
-li{
-    list-style-type: disc;
-    list-style-position: inside;
+
+a{
+  padding: 2px 10px 2px 10px;
+  margin: 5px;
 }
